RAxML option changes

--- a/tutorials/pG_2_tutorial.tex
+++ b/tutorials/pG_2_tutorial.tex
@@ -183,6 +183,13 @@ gene alignments, and the raw output from your phylogeny building
 step. Take a look at all of these outputs, and see if you're satisfied
 with the resulting tree.
 
+If you don't have the output you're expecting, checking the log-file
+because the error message within that will be informative. A common
+problem is phylogeny-building: different compilation options of
+\texttt{RAxML} (and the other programs) have different requirements,
+and you may need to use the \textbf{phy\_options} option to specify
+those (see below).
+
 \section*{Walking: zooplankton}
 OK, so we can build a plant phylogeny. What about something a bit less
 common? What about... zooplankton? In the zooplankton folder there's a
